<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.RelativeLayout">

    <TextView
        android:id="@+id/start_search_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_status_start_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/question_circle" />

    <LinearLayout
        android:id="@+id/loading_search_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="56dp"
            android:layout_height="56dp" />

        <TextView
            android:id="@+id/loading_number_trivia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/loading_search_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_search_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_error_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/error_indicator" />

    <TextView
        android:id="@+id/result_search_status"
        android:visibility="gone"
        android:textColor="@color/orange_1"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_16dp"
        android:layout_marginTop="@dimen/default_margin_16dp"
        android:layout_marginEnd="@dimen/default_margin_16dp"
        android:fontFamily="@font/nunito_bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number" />
</merge>