<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_16dp"
        android:layout_marginTop="@dimen/default_margin_16dp"
        android:layout_marginEnd="@dimen/default_margin_16dp"
        android:hint="@string/main_hint_edit"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_16dp"
        android:layout_marginEnd="@dimen/default_margin_16dp"
        android:text="@string/search_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/edit_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.jrcodev.numberstrivia.ui.SearchStatusView
        android:id="@+id/view_status_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:label="teste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number"
        app:status="start" />

    <TextView
        android:id="@+id/list_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_16dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/list_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_status_search" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#51AAAAAA"
        app:layout_constraintBottom_toTopOf="@+id/trivia_list"
        app:layout_constraintTop_toBottomOf="@+id/list_title_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trivia_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>